# cmake-simple

./: README.md
simple/: CMakeLists.txt  README.md
simple-deps/: CMakeLists.txt  README.md
simple-deps/demo/: CMakeLists.txt
simple-deps/demo/include/: demo_com.h
simple-deps/demo/src/: main.cc
simple-mod/: CMakeLists.txt  README.md
simple-mod-deps/: CMakeLists.txt  README.md
simple-mod-deps/demo/: CMakeLists.txt
simple-mod-deps/demo/include/: demo_server.h
simple-mod-deps/demo/src/: demo_server.cc  main.cc
simple-mod-deps/store/: CMakeLists.txt
simple-mod/demo/: CMakeLists.txt
simple-mod/demo/src/: main.cc
simple-mod/store/: CMakeLists.txt
simple-mod/store/include/: store_utils.h
simple-mod/store/src/: store_utils.cc
simple/demo/: CMakeLists.txt
simple/demo/include/: demo_utils.h
simple/demo/src/: demo_utils.cc  main.cc
